--- a/inbox.html
+++ b/inbox.html
@@ -36,7 +36,7 @@
 	    </nav>
       	</div>
       	<div class="jumbotron">
-      		<div class="container">
+      		<div class="container-fluid">
       			<div class="row">
       				<div class="col-lg-3 sidebar_left">
       					<div class="card">
@@ -85,39 +85,94 @@
       					</div>
       				</div>
       				<div class="col-lg-9 sidebar_right">
-      					<div class="compose_mail_box">
+      					<div class="row">
+      						<div class="col-lg-12">
+      							<h3 class="page-header">
+      								Inbox <small>Account</small>
+      							</h3>
+      						</div>
+      					</div>
+      					<div class="row">
+      						<div class="col-lg-12">
+      							<div class="inbox_mail_box">
       						<div class="card">
       							<div class="card-block">
-      								<h2 class="compose_title">compose message</h2>
+      								<h2 class="inbox-title"> message</h2>
 
-      								<form action="" class="form" method="post">
-      									<div class="form-group row">
-										  <label for="example-text-input" class="col-3 col-form-label">To</label>
-										  <div class="col-9">
-										    <input class="form-control" type="email" name="email">
-										  </div>
-										</div>
-										<div class="form-group row">
-										  <label for="example-text-input" class="col-3 col-form-label">Subject</label>
-										  <div class="col-9">
-										    <input class="form-control" type="text" name="subject">
-										  </div>
-										</div>
-										<div class="form-group row">
-										  <label for="example-text-input" class="col-3 col-form-label">Messages</label>
-										  <div class="col-9">
-										    <textarea name="message" id="" rows="3" class="form-control"></textarea>
-										  </div>
-										</div>
-										<div class="row form-group">
-											<div class="col-9 ml-auto">
-												<button type="submit" class="btn btn-primary">Send New Message</button>
-											</div>
-										</div>
-      								</form>
+      								<table class="table-bordered">
+      									<tbody>
+      										<tr>
+      											<td>
+      												<div class="form-check">
+													    <label class="form-check-label">
+													      <input type="checkbox" class="form-check-input">
+													    </label>
+													  </div>
+      											</td>
+      											<td>
+      												<a href="">Host Name</a>
+      											</td>
+      											<td style="width:65%">
+      												<a href="view_message.html">
+      													<strong>Consectetur adipisicing elit</strong>
+      													<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      												</a>
+      											</td>
+      											<td>
+      												May 15, 2017
+      											</td>
+      										</tr>
+      										<tr>
+      											<td>
+      												<div class="form-check">
+													    <label class="form-check-label">
+													      <input type="checkbox" class="form-check-input">
+													    </label>
+													  </div>
+      											</td>
+      											<td>
+      												<a href="">Host Name</a>
+      											</td>
+      											<td style="width:65%">
+      												<a href="view_message.html">
+      													<strong>Consectetur adipisicing elit</strong>
+      													<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      												</a>
+      											</td>
+      											<td>
+      												May 15, 2017
+      											</td>
+      										</tr>
+      										<tr>
+      											<td>
+      												<div class="form-check">
+													    <label class="form-check-label">
+													      <input type="checkbox" class="form-check-input">
+													    </label>
+													  </div>
+      											</td>
+      											<td>
+      												<a href="">Host Name</a>
+      											</td>
+      											<td style="width:65%">
+      												<a href="view_message.html">
+      													<strong>Consectetur adipisicing elit</strong>
+      													<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      												</a>
+      											</td>
+      											<td>
+      												May 15, 2017
+      											</td>
+      										</tr>
+      										
+      									</tbody>
+      								</table>
       							</div>
       						</div>
       					</div>
+      						</div>
+      					</div>
+      					
       				</div>
       			</div>
       		</div>
