--- a/view_message.html
+++ b/view_message.html
@@ -36,7 +36,7 @@
 	    </nav>
       	</div>
       	<div class="jumbotron">
-      		<div class="container">
+      		<div class="container-fluid">
       			<div class="row">
       				<div class="col-lg-3 sidebar_left">
       					<div class="card">
@@ -85,39 +85,56 @@
       					</div>
       				</div>
       				<div class="col-lg-9 sidebar_right">
-      					<div class="compose_mail_box">
-      						<div class="card">
-      							<div class="card-block">
-      								<h2 class="compose_title">compose message</h2>
-
-      								<form action="" class="form" method="post">
-      									<div class="form-group row">
-										  <label for="example-text-input" class="col-3 col-form-label">To</label>
-										  <div class="col-9">
-										    <input class="form-control" type="email" name="email">
-										  </div>
-										</div>
-										<div class="form-group row">
-										  <label for="example-text-input" class="col-3 col-form-label">Subject</label>
-										  <div class="col-9">
-										    <input class="form-control" type="text" name="subject">
-										  </div>
-										</div>
-										<div class="form-group row">
-										  <label for="example-text-input" class="col-3 col-form-label">Messages</label>
-										  <div class="col-9">
-										    <textarea name="message" id="" rows="3" class="form-control"></textarea>
-										  </div>
-										</div>
-										<div class="row form-group">
-											<div class="col-9 ml-auto">
-												<button type="submit" class="btn btn-primary">Send New Message</button>
-											</div>
-										</div>
-      								</form>
-      							</div>
-      						</div>
-      					</div>
+      					<div class="view_message_box">
+                  <div class="card">
+                    <div class="card-block">
+                      <h4 class="message-title">Hi John! How are you ?</h4>
+                      <hr>
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="media">
+                            <img class="d-flex mr-3 img-circle" src="img/user-img.png" alt="Generic placeholder image">
+                            <div class="media-body">
+                              <h5 class="mt-0 user_name">Lisa D. Smith</h5>
+                              <small> lisa.aqua@themeon.net </small>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-6">
+                          <div class="date_time text-right">
+                            12jun 2017
+                          </div>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="row">
+                        <div class="col-lg-12">
+                          <p> Hey John, </p>
+                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                          <p>Regards,</p>
+                          <address>
+                            Lisa D. Smith <br>
+                            2834 Street Name <br>  
+                            San Francisco, CA <br>
+                          </address>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="row">
+                        <div class="col-lg-12">
+                          <form action="" class="form">
+                            <div class="form-group">
+                              <textarea name="reply" placeholder ="Enter your answer here" rows="3" class="form-control"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Reply to sender</button>
+                          </form>
+                        </div>
+                      </div>
+                    </div>
+                      
+                    
+                  </div>     
+                </div>
       				</div>
       			</div>
       		</div>
